
add_executable(${PROJECT_NAME}-thread1 9.1.thread.basic.cpp)

add_executable(${PROJECT_NAME}-thread2 9.2.critical.section.a.cpp)

add_executable(${PROJECT_NAME}-thread3 9.3.critical.section.b.cpp)

add_executable(${PROJECT_NAME}-thread4 9.4.futures.cpp)

add_executable(${PROJECT_NAME}-thread5 9.5.producer.consumer.cpp)

add_executable(${PROJECT_NAME}-thread6 9.6.atomic.cpp)

add_executable(${PROJECT_NAME}-thread7 9.7.bad.example.cpp)

add_executable(${PROJECT_NAME}-thread8 9.8.is.lock.free.cpp)

add_executable(${PROJECT_NAME}-thread9 9.9.memory.order.cpp)